syntax = "proto3";
package ip;
option go_package = "/ip";

service IPService {
  rpc TellMeYourIP(TellMeYourIPRequest) returns (TellMeYourIPResponse);
}

message TellMeYourIPRequest {
  string client_ip = 1;
}

message TellMeYourIPResponse {
  string server_ip = 1;
}
